added signup controller

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <base href="/" />
@@ -15,21 +15,20 @@
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/main.js"></script>
 
-    <!-- ionic/angularjs js -->
+    ionic/angularjs js
     <script src="/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
+    cordova script (this will be a 404 during development)
     <script src="cordova.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
-        <p>Hello stupid ass generator</p>
       </ion-header-bar>
       <ion-content>
       </ion-content>
     </ion-pane>
-    <!-- <div ui-view></div> -->
+    <div ui-view></div>
 </body>
-</html>
+</html> -->
