--- a/browser/templates/login.html
+++ b/browser/templates/login.html
@@ -8,18 +8,24 @@
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
+
         <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
+          <input type="text" ng-model="user.email">
         </label>
+
+
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="password" ng-model="user.password">
         </label>
+
+
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive" type="submit" ng-click="doLogin()">Log in</button>
         </label>
       </div>
     </form>
+              <button class="button button-negative" type="submit" ng-click="showSignup()">Sign Up</button>
   </ion-content>
 </ion-modal-view>
