--- a/browser/templates/playlists.html
+++ b/browser/templates/playlists.html
@@ -1,8 +1,7 @@
 <ion-view view-title="Playlists">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
+      <ion-item>
       </ion-item>
     </ion-list>
   </ion-content>
