working on post

--- a/browser/templates/menu.html
+++ b/browser/templates/menu.html
@@ -21,6 +21,15 @@
         <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>
+
+        <ion-item nav-clear menu-close ui-sref="post">
+          Post
+        </ion-item>
+
+        <ion-item nav-clear menu-close ui-sref="post">
+          Match
+        </ion-item>
+
       </ion-list>
     </ion-content>
   </ion-side-menu>
