Minor updates to front-page

--- a/browser/templates/menu.html
+++ b/browser/templates/menu.html
@@ -21,6 +21,9 @@
         <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>
+        <ion-item nav-clear menu-close ui-sref="front-page">
+          Front Page
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
