--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,12 +9,14 @@ td-card {
   margin-bottom: 40px;
   margin-left: -150px;
   width: 300px;
-  height: 300px;
+  height: 450px;
 
   border: 1px solid #999;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
   border-radius: 6px;
 }
+
+
 /*
 td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
@@ -35,13 +37,31 @@ td-card.card-2 {
 */
 
 td-card .image {
-  position: relative;
+/*  position: relative;*/
+  position: absolute;
+  left: 7.5%;
+
 }
 
 td-card img {
   max-width: 100%;
   border-radius: 6px;
+  height: 300px;
+  width: 250px;
 }
+
+/*
+.tdimage {
+  position: relative;
+
+}
+
+.url {
+  max-width: 100%;
+  border-radius: 6px;
+  height: 300px;
+  width: 250px;
+}*/
 
 .yes-text {
   position: absolute;
