working on tindercard

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,8 @@ td-card {
   margin-bottom: 40px;
   margin-left: -150px;
   width: 300px;
-  height: 450px;
+  height: 500px;
+  background-color: white;
 
   border: 1px solid #999;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
@@ -37,7 +38,7 @@ td-card.card-2 {
 */
 
 td-card .image {
-/*  position: relative;*/
+
   position: absolute;
   left: 7.5%;
 
@@ -85,10 +86,6 @@ td-card img {
   transition: 0.2s opacity linear;
   opacity: 0;
 }
-
-
-
-
 
 
 .chat-bubble {
