--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -4,13 +4,12 @@
     <h1 class="title">Details</h1>
   </ion-header-bar>
 
-<td-card ng-repeat="card in cards">
   <div class="image">
-      <img class="url" ng-src="{{card.photoUrls}}">
-      <div class="title" style="font-weight: bolder; font-size: 18px; text-align: center">{{card.title}} <div>
-      <div class="description">{{card.description}} </div>
+      <img class="url" ng-src="{{product.photoUrls}}">
+      <div class="title" style="font-weight: bolder; font-size: 18px; text-align: center">{{product.title}} <div>
+      <div class="description">{{product.description}} </div>
+      <div>{{ product.location }}</div>
   </div>
 
-</td-card>
 
 </ion-view>
