--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -1,15 +1,45 @@
 <ion-view view-title="Details" >
 
   <ion-header-bar class="bar-default">
-    <h1 class="title">Details</h1>
+    <h1 class="title">Product Details</h1>
   </ion-header-bar>
 
-  <div class="image">
+<!--   <div class="image">
       <img class="url" ng-src="{{product.photoUrls}}">
       <div class="title" style="font-weight: bolder; font-size: 18px; text-align: center">{{product.title}} <div>
       <div class="description">{{product.description}} </div>
       <div>{{ product.location }}</div>
-  </div>
+  </div> -->
+	<div class="list card">
+		<br>
+	  <div class="item item-avatar">
+	    <img ng-src="{{product.photoUrls}}">
+	    <h2>{{ product.location }}</h2>
+	    <p>November 05, 1955</p>
+	  </div>
 
+	  <div class="item item-body">
+	    <img class="full-image" ng-src="{{product.photoUrls}}">
+	    <p>
+	      {{ product.description }}
+	    </p>
+	  </div>
+
+	  <div class="item tabs tabs-secondary tabs-icon-left">
+	    <a class="tab-item" href="#">
+	      <i class="icon ion-thumbsup"></i>
+	      Like
+	    </a>
+	    <a class="tab-item" href="#">
+	      <i class="icon ion-chatbox"></i>
+	      Comment
+	    </a>
+	    <a class="tab-item" href="#">
+	      <i class="icon ion-share"></i>
+	      Share
+	    </a>
+	  </div>
+
+	</div>
 
 </ion-view>
