--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,19 +6,18 @@ td-card {
   position: absolute;
   left: 50%;
   margin-top: 80px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   margin-left: -150px;
   width: 300px;
-  height: 500px;
+  max-height: 500px;
   background-color: white;
-
-  border: 1px solid #999;
+  /*border: 1px solid #999;*/
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
   border-radius: 6px;
 }
 
 
-/*
+
 td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
   transform: translate3d(0, 0px, 0);
@@ -35,20 +34,18 @@ td-card.card-2 {
   transform: translate3d(0, 8px, 0);
   z-index: 8;
 }
-*/
+
 
 td-card .image {
-
   position: absolute;
-  left: 7.5%;
-
+  left: 5%;
 }
 
 td-card img {
   max-width: 100%;
   border-radius: 6px;
-  height: 300px;
-  width: 250px;
+  max-height: 300px;
+  max-width: 275px;
 }
 
 /*
@@ -138,4 +135,38 @@ td-card img {
 
 ul {
   overflow: scroll;
+}
+/*
+.ion-view {
+  font-family: 'Pacifico', cursive;
+}*/
+
+* {
+  font-family: 'Rancho', cursive;
+  font-size: 16px;
+}
+
+ion-view {
+    background-image: url("../img/freeswapMap.png");
+}
+
+.button-stable {
+  border-radius: 100%;
+  border:2px solid #cfdcec;
+  box-shadow: 0 0 3px gray;
+  width: 100px;
+  height: 100px;
+}
+
+img {
+  box-shadow: 0 0 3px gray;
+}
+
+.input-label {
+  font-size: 16px;
+}
+
+.tinderButtons {
+  text-align: center;
+  margin-top: 300px;
 }
