--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,19 +6,29 @@ td-card {
   position: absolute;
   left: 50%;
   margin-top: 80px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   margin-left: -150px;
   width: 300px;
-  max-height: 500px;
+  height: 275px;
   background-color: white;
-  /*border: 1px solid #999;*/
+  border: 1px solid #999;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 6px;
 }
 
-
-
 td-card.card-0 {
+  -webkit-transform: rotate(-2deg)
+}
+td-card.card-1 {
+  -webkit-transform: rotate(2deg)
+}
+td-card.card-2 {
+  -webkit-transform: rotate(-4deg)
+}
+td-card.card-3 {
+  -webkit-transform: rotate(4deg)
+}
+
+/*td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
   transform: translate3d(0, 0px, 0);
   top: 0px;
@@ -33,17 +43,16 @@ td-card.card-2 {
   -webkit-transform: translate3d(0, 8px, 0);
   transform: translate3d(0, 8px, 0);
   z-index: 8;
-}
+}*/
 
 
 td-card .image {
   position: absolute;
-  left: 5%;
+  left: 4%;
 }
 
 td-card img {
   max-width: 100%;
-  border-radius: 6px;
   max-height: 300px;
   max-width: 275px;
 }
@@ -169,4 +178,22 @@ img {
 .tinderButtons {
   text-align: center;
   margin-top: 300px;
+}
+
+.crop{
+  float:left;
+  margin:.5em 10px .5em 0;
+  overflow:hidden; /* this is important */
+  position:relative; /* this is important too */
+  width:385px;
+  height:200px;
+}
+.crop img{
+  position:absolute;
+  top:-20px;
+  left:-55px;
+}
+
+h1 {
+  font-size: 36px;
 }
