working on styling

--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -1,4 +1,4 @@
-<ion-popover-view view-title="Details">
+<ion-modal-view view-title="Details">
   <ion-header-bar class="bar-default">
     <h1 class="title">Product Details</h1>
   </ion-header-bar>
@@ -29,4 +29,4 @@
       </div>
     </div>
   </ion-content>
-</ion-popover-view>
+</ion-modal-view>
