--- a/www/css/style.css
+++ b/www/css/style.css
@@ -140,6 +140,7 @@ td-card img {
 .chat-bubble.right a.autolinker {
   color: #fff;
   font-weight: bold;
+  color: ;
 }
 
 ul {
@@ -172,7 +173,8 @@ img {
 }
 
 .input-label {
-  font-size: 16px;
+  font-size: 18px;
+  width: 10%;
 }
 
 .tinderButtons {
@@ -197,3 +199,4 @@ img {
 h1 {
   font-size: 36px;
 }
+
