--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -1,5 +1,5 @@
 <ion-modal-view view-title="Details">
-  <ion-header-bar class="bar-default">
+  <ion-header-bar class="bar-dark">
     <h1 class="title">Product Details</h1>
   </ion-header-bar>
   <ion-content>
