--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -4,19 +4,32 @@
   </ion-header-bar>
   <ion-content>
     <div class="list card">
-      <br>
-      <div class="item item-avatar">
-        <img ng-src="{{product.photoUrls}}">
-        <h2>{{ currentCard.location }}</h2>
-        <p>Expiry Date: {{ currentCard.expiration }}</p>
+      <i class="fa fa-times-circle-o pull-right" style="color: #D90208; margin-top: -5px; margin-right: -5px; " class=""ng-click="closeModal()"></i>
+      <div style="text-align:center">
+        <h1 style="">{{ currentCard.title }}</h1>
+        <h3 ng-show="currentCard.location">{{ currentCard.location }}</h3>
+        <h3 style="font-family: helvetica; font-style: italic; font-size: 16px; color: gray" ng-show="!currentCard.location">No location Specified</h3>
+        <p style="font-size: 14px; ">Expiry Date: {{ currentCard.expiration | date: 'MMM-dd-yy'}}</p>
       </div>
       <div class="item item-body">
-        <img class="full-image" ng-src="{{currentCard.photoUrls}}">
-        <p>
+        <p style="font-family: helvetica">
           {{ currentCard.description }}
         </p>
       </div>
-      <button ng-click="closeModal()"></button>
+    </div>
+    <div class="item tabs tabs-secondary tabs-icon-left">
+      <a class="tab-item" href="#">
+        <i class="icon ion-thumbsup"></i>
+        Like
+      </a>
+      <a class="tab-item" href="#">
+        <i class="icon ion-chatbox"></i>
+        Comment
+      </a>
+      <a class="tab-item" href="#">
+        <i class="icon ion-share"></i>
+        Share
+      </a>
     </div>
   </ion-content>
 </ion-modal-view>
