--- a/www/js/view/view.html
+++ b/www/js/view/view.html
@@ -19,16 +19,13 @@
     </div>
     <div class="item tabs tabs-secondary tabs-icon-left">
       <a class="tab-item" href="#">
-        <i class="icon ion-thumbsup"></i>
-        Like
+        <i class="fa fa-times fa-5x" style= "color: red"></i>
       </a>
       <a class="tab-item" href="#">
-        <i class="icon ion-chatbox"></i>
-        Comment
+        <i class="fa fa-share fa-2x" style="margin: auto"></i>
       </a>
       <a class="tab-item" href="#">
-        <i class="icon ion-share"></i>
-        Share
+        <i class="fa fa-check fa-5x" style= "color: green"></i>
       </a>
     </div>
   </ion-content>
