--- a/www/css/style.css
+++ b/www/css/style.css
@@ -53,8 +53,8 @@ td-card .image {
 
 td-card img {
   max-width: 100%;
-  max-height: 300px;
-  max-width: 275px;
+  max-height: 200px;
+  /*max-width: 275px;*/
 }
 
 /*
