--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -5,18 +5,30 @@ td-cards {
 td-card {
   position: absolute;
   left: 50%;
-  margin-top: 80px;
-  margin-bottom: 40px;
+  margin-top: 15px;
+  margin-bottom: 0px;
   margin-left: -150px;
   width: 300px;
-  height: 300px;
-
+  height: 275px;
+  background-color: white;
   border: 1px solid #999;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 6px;
 }
-/*
+
 td-card.card-0 {
+  -webkit-transform: rotate(-2deg)
+}
+td-card.card-1 {
+  -webkit-transform: rotate(2deg)
+}
+td-card.card-2 {
+  -webkit-transform: rotate(-4deg)
+}
+td-card.card-3 {
+  -webkit-transform: rotate(4deg)
+}
+
+/*td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
   transform: translate3d(0, 0px, 0);
   top: 0px;
@@ -31,17 +43,33 @@ td-card.card-2 {
   -webkit-transform: translate3d(0, 8px, 0);
   transform: translate3d(0, 8px, 0);
   z-index: 8;
-}
-*/
+}*/
+
 
 td-card .image {
-  position: relative;
+  position: absolute;
+  width: 100%;
+  left: 4%;
 }
 
 td-card img {
   max-width: 100%;
-  border-radius: 6px;
+  max-height: 200px;
+  /*max-width: 275px;*/
 }
+
+/*
+.tdimage {
+  position: relative;
+
+}
+
+.url {
+  max-width: 100%;
+  border-radius: 6px;
+  height: 300px;
+  width: 250px;
+}*/
 
 .yes-text {
   position: absolute;
@@ -65,10 +93,6 @@ td-card img {
   transition: 0.2s opacity linear;
   opacity: 0;
 }
-
-
-
-
 
 
 .chat-bubble {
@@ -117,8 +141,285 @@ td-card img {
 .chat-bubble.right a.autolinker {
   color: #fff;
   font-weight: bold;
+  color: ;
 }
 
 ul {
   overflow: scroll;
+}
+/*
+.ion-view {
+  font-family: 'Pacifico', cursive;
+}*/
+
+* {
+  font-family: 'Rancho', cursive;
+  font-size: 24px;
+}
+
+/*ion-view {
+    background-image: url("../img/random.png");
+}*/
+ion-content {
+  background-image: url("../img/random.png");
+}
+
+ion-pane.pane {
+  top: 45px;
+  background-image: url("../img/random.png");
+}
+
+#side-menu {
+  background-color: #7F7F7F;
+}
+
+
+.button-stable {
+  border-radius: 100%;
+  border:2px solid #cfdcec;
+  box-shadow: 0 0 3px gray;
+  width: 100px;
+  height: 100px;
+}
+
+img {
+  box-shadow: 0 0 3px gray;
+}
+
+.input-label {
+  font-size: 18px;
+  width: 90px;
+}
+.item-input input {
+  max-width: 90%;
+}
+
+.tinderButtons {
+  text-align: center;
+  margin-top: 300px;
+}
+
+.crop{
+  float:left;
+  margin:.5em 10px .5em 0;
+  overflow:hidden; /* this is important */
+  position:relative; /* this is important too */
+  width:385px;
+  height:200px;
+}
+.crop img{
+  position:absolute;
+  top:-20px;
+  left:-55px;
+  max-width:400px;
+}
+
+h1 {
+  font-family: 'Rancho', cursive;
+  font-size: 36px;
+  text-align: center;
+}
+
+h2.ng-binding{
+  font-family: 'Rancho', cursive;
+  font-size: 26px;
+  text-align: left;
+}
+
+h2 {
+  font-family: 'Rancho', cursive;
+  font-size: 36px;
+  text-align: center;
+}
+
+.bar .title {
+  font-size: 35px;
+  font-family: 'Rancho', cursive;
+}
+
+.fa-facebook {
+  padding-right: 20px;
+}
+
+.item-content{
+  font-size: 24px;
+}
+
+.view-location {
+  font-family: helvetica;
+  font-style: italic;
+  font-size: 14px;
+  color: #676767;
+}
+
+.view-expiry {
+  font-size: 14px;
+  font-style: italic;
+}
+
+.card-counter {
+  background-color: #FFD600;
+  border: 2px solid #AF9301;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  display: inline;
+  text-align: center;
+}
+
+.card-counter-number {
+  background-color: white;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border: 2px solid #AF9301;
+  display: inline;
+}
+
+.register {
+  text-align: center;
+}
+
+#location {
+  padding-left: 10px;
+  text-align: center;
+  bottom: 50px;
+  position: absolute;
+}
+
+/*.bar-footer {
+  overflow: visible !important;
+}
+
+.bar-footer textarea {
+  resize: none;
+  height: 25px;
+}
+
+button.ion-android-send {
+  padding-top: 2px;
+}
+
+.footer-btn-wrap {
+  position: relative;
+  height: 100%;
+  width: 50px;
+  top: 7px;
+}
+
+.footer-btn {
+  position: absolute !important;
+  bottom: 0;
+}
+
+img.profile-pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 10px;
+}
+
+img.profile-pic.left {
+  left: 10px;
+}
+
+img.profile-pic.right {
+  right: 10px;
+}
+
+.ion-email {
+  float: right;
+  font-size: 32px;
+  vertical-align: middle;
+}*/
+
+.message {
+  font-size: 14px;
+}
+
+.message-detail {
+  white-space: nowrap;
+  font-size: 14px;
+}
+
+.bar.item-input-inset .item-input-wrapper input {
+  width: 100% !important;
+}
+
+.message-wrapper {
+  position: relative;
+  display: block;
+}
+
+.message-wrapper:last-child {
+  margin-bottom: 10px;
+}
+
+.chat-bubble {
+  border-radius: 5px;
+  display: block;
+  /*padding: 10px 18px;*/
+  position: relative;
+  /*margin: 10px;*/
+  width: 80%;
+}
+
+.chat-bubble:before {
+  content: "\00a0";
+  display: block;
+  height: 16px;
+  width: 9px;
+  position: absolute;
+  bottom: -7.5px;
+}
+
+.chat-bubble.left {
+  background-color: #5CABFF;
+  float: left;
+  margin-left: 5px;
+  opacity:.75;
+}
+
+.chat-bubble.left:before {
+  background-color: #5CABFF;
+    opacity:.75;
+/*  left: 10px;*/
+  -webkit-transform: rotate(70deg) skew(5deg);
+}
+
+.chat-bubble.right {
+  background-color: #158ffe;
+  color: #fff;
+  float: right;
+  margin-right: 55px;
+}
+
+.chat-bubble.right:before {
+  background-color: #158ffe;
+  right: 10px;
+  -webkit-transform: rotate(118deg) skew(-5deg);
+}
+
+
+.user-messages-top-icon {
+  font-size: 28px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  top: -3px;
+  right: 5px;
+}
+
+.msg-header-username {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  top: -3px;
+}
+
+input, textarea, .item-input, .item-input-wrapper {
+  background-color: #f4f4f4 !important;
+}
+
+.cf {
+  clear: both !important;
 }
